Term 1 - Project 2 Submission

--- a/src/Traffic_Sign_Classifier.ipynb
+++ b/src/Traffic_Sign_Classifier.ipynb
@@ -4,23 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Self-Driving Car Engineer Nanodegree\n",
-    "\n",
-    "## Deep Learning\n",
-    "\n",
-    "## Project: Build a Traffic Sign Recognition Classifier\n",
-    "\n",
-    "In this notebook, a template is provided for you to implement your functionality in stages, which is required to successfully complete this project. If additional code is required that cannot be included in the notebook, be sure that the Python code is successfully imported and included in your submission if necessary. \n",
-    "\n",
-    "> **Note**: Once you have completed all of the code implementations, you need to finalize your work by exporting the iPython Notebook as an HTML document. Before exporting the notebook to html, all of the code cells need to have been run so that reviewers can see the final implementation and output. You can then export the notebook by using the menu above and navigating to  \\n\",\n",
-    "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission. \n",
-    "\n",
-    "In addition to implementing code, there is a writeup to complete. The writeup should be completed in a separate file, which can be either a markdown file or a pdf document. There is a [write up template](https://github.com/udacity/CarND-Traffic-Sign-Classifier-Project/blob/master/writeup_template.md) that can be used to guide the writing process. Completing the code template and writeup template will cover all of the [rubric points](https://review.udacity.com/#!/rubrics/481/view) for this project.\n",
-    "\n",
-    "The [rubric](https://review.udacity.com/#!/rubrics/481/view) contains \"Stand Out Suggestions\" for enhancing the project beyond the minimum requirements. The stand out suggestions are optional. If you decide to pursue the \"stand out suggestions\", you can include the code in this Ipython notebook and also discuss the results in the writeup file.\n",
-    "\n",
-    "\n",
-    ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut. In addition, Markdown cells can be edited by typically double-clicking the cell to enter edit mode."
+    "# Self-Driving Car Engineer Nanodegree"
    ]
   },
   {
@@ -310,7 +294,6 @@
     "                \n",
     "        # Update data parameters.\n",
     "        self.depth = tmp.shape[3]\n",
-    "        #self.printStats(data)\n",
     "        return tmp\n",
     "    \n",
     "    \n",
@@ -387,7 +370,7 @@
     "    def LeNet(self, x):    \n",
     "    \n",
     "        # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "        W1 = tf.Variable(tf.truncated_normal(shape=(5, 5, 1, 6), mean = self.mu, stddev = self.sigma), name=\"W1\")\n",
+    "        W1 = tf.Variable(tf.truncated_normal(shape=(5, 5, self.depth, 6), mean = self.mu, stddev = self.sigma), name=\"W1\")\n",
     "        x = tf.nn.conv2d(x, W1, strides=[1, 1, 1, 1], padding='VALID')\n",
     "        b1 = tf.Variable(tf.zeros(6), name=\"b1\")\n",
     "        x = tf.nn.bias_add(x, b1)\n",
@@ -435,8 +418,8 @@
     "        x = tf.nn.dropout(x, self.keep_prob)\n",
     "\n",
     "        # Layer 4: Fully Connected. Input = 800. Output = 43.\n",
-    "        W4 = tf.Variable(tf.truncated_normal(shape=(800, 43), mean = self.mu, stddev = self.sigma), name=\"W4\")\n",
-    "        b4 = tf.Variable(tf.zeros(43), name=\"b4\")    \n",
+    "        W4 = tf.Variable(tf.truncated_normal(shape=(800, self.n_classes), mean = self.mu, stddev = self.sigma), name=\"W4\")\n",
+    "        b4 = tf.Variable(tf.zeros(self.n_Classes), name=\"b4\")    \n",
     "        logits = tf.add(tf.matmul(x, W4), b4)\n",
     "\n",
     "        return logits\n",
@@ -701,14 +684,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Set Accuracy = 0.016\n"
+      "Test Set Accuracy = 0.930\n"
      ]
     }
    ],
@@ -825,27 +808,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'top_k' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-87aff3966753>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtop_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'top_k' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(top_k)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [
@@ -881,15 +843,6 @@
     "        axs[i*6+p+1].imshow(tsc.gallery[top_k[1][i][p]].squeeze(), cmap='gray')\n",
     "        \n",
     "        axs[i*6+p+1].set_title(\"Guess {} ({:0.0f}%)\".format(p+1, top_k[0][i][p]*100))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Project Writeup\n",
-    "\n",
-    "Once you have completed the code implementation, document your results in a project writeup using this [template](https://github.com/udacity/CarND-Traffic-Sign-Classifier-Project/blob/master/writeup_template.md) as a guide. The writeup can be in a markdown or pdf file. "
    ]
   }
  ],
