Term 1 - Project 2 Submission

--- a/src/Traffic_Sign_Classifier.ipynb
+++ b/src/Traffic_Sign_Classifier.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +250,7 @@
     "        self.test_length = self.X_test.shape[0]\n",
     "        self.x = tf.placeholder(tf.float32, (None, 32, 32, self.depth))\n",
     "        self.printStats(self.X_test)\n",
+    "        self.depth = 1\n",
     "\n",
     "    \n",
     "    def load_(self, filepath):\n",
@@ -370,46 +371,46 @@
     "    def LeNet(self, x):    \n",
     "    \n",
     "        # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "        W1 = tf.Variable(tf.truncated_normal(shape=(5, 5, self.depth, 6), mean = self.mu, stddev = self.sigma), name=\"W1\")\n",
-    "        x = tf.nn.conv2d(x, W1, strides=[1, 1, 1, 1], padding='VALID')\n",
-    "        b1 = tf.Variable(tf.zeros(6), name=\"b1\")\n",
-    "        x = tf.nn.bias_add(x, b1)\n",
+    "        conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, self.depth, 6), mean = self.mu, stddev = self.sigma))\n",
+    "        conv1_b = tf.Variable(tf.zeros(6))\n",
+    "        conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID')   \n",
+    "        conv1   = tf.nn.bias_add(conv1, conv1_b)\n",
     "\n",
     "        # Activation.\n",
-    "        x = tf.nn.relu(x)\n",
+    "        conv1   = tf.nn.relu(conv1)\n",
     "\n",
     "        # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
-    "        x = tf.nn.max_pool(x, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
-    "        layer1 = x\n",
+    "        conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "        layer1 = conv1\n",
     "\n",
     "        # Layer 2: Convolutional. Output = 10x10x16.\n",
-    "        W2 = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = self.mu, stddev = self.sigma), name=\"W2\")\n",
-    "        x = tf.nn.conv2d(x, W2, strides=[1, 1, 1, 1], padding='VALID')\n",
-    "        b2 = tf.Variable(tf.zeros(16), name=\"b2\")\n",
-    "        x = tf.nn.bias_add(x, b2)\n",
+    "        conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = self.mu, stddev = self.sigma))\n",
+    "        conv2_b = tf.Variable(tf.zeros(16))\n",
+    "        conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID')\n",
+    "        conv2   = tf.nn.bias_add(conv2, conv2_b)\n",
     "\n",
     "        # Activation.\n",
-    "        x = tf.nn.relu(x)\n",
+    "        conv2   = tf.nn.relu(conv2)\n",
     "\n",
     "        # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
-    "        x = tf.nn.max_pool(x, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
-    "        layer2 = x\n",
+    "        conv2   = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "        layer2  = conv2\n",
     "\n",
     "        # Layer 3: Convolutional. Output = 1x1x400.\n",
-    "        W3 = tf.Variable(tf.truncated_normal(shape=(5, 5, 16, 400), mean = self.mu, stddev = self.sigma), name=\"W3\")\n",
-    "        x = tf.nn.conv2d(x, W3, strides=[1, 1, 1, 1], padding='VALID')\n",
-    "        b3 = tf.Variable(tf.zeros(400), name=\"b3\")\n",
-    "        x = tf.nn.bias_add(x, b3)\n",
+    "        conv3_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 16, 400), mean = self.mu, stddev = self.sigma))\n",
+    "        conv3_b = tf.Variable(tf.zeros(400))\n",
+    "        conv3   = tf.nn.conv2d(conv2, conv3_W, strides=[1, 1, 1, 1], padding='VALID')\n",
+    "        conv3   = tf.nn.bias_add(conv3, conv3_b)\n",
     "\n",
     "        # Activation.\n",
-    "        x = tf.nn.relu(x)\n",
-    "        layer3 = x\n",
+    "        conv3   = tf.nn.relu(conv3)\n",
+    "        layer3  = conv3\n",
     "\n",
     "        # Flatten. Input = 5x5x16. Output = 400.\n",
     "        layer2flat = flatten(layer2)\n",
     "\n",
     "        # Flatten x. Input = 1x1x400. Output = 400.\n",
-    "        xflat = flatten(x)\n",
+    "        xflat = flatten(conv3)\n",
     "\n",
     "        # Concat layer2flat and x. Input = 400 + 400. Output = 800\n",
     "        x = tf.concat_v2([xflat, layer2flat], 1)\n",
@@ -418,9 +419,9 @@
     "        x = tf.nn.dropout(x, self.keep_prob)\n",
     "\n",
     "        # Layer 4: Fully Connected. Input = 800. Output = 43.\n",
-    "        W4 = tf.Variable(tf.truncated_normal(shape=(800, self.n_classes), mean = self.mu, stddev = self.sigma), name=\"W4\")\n",
-    "        b4 = tf.Variable(tf.zeros(self.n_Classes), name=\"b4\")    \n",
-    "        logits = tf.add(tf.matmul(x, W4), b4)\n",
+    "        conv4_W = tf.Variable(tf.truncated_normal(shape=(800, self.n_classes), mean = self.mu, stddev = self.sigma))\n",
+    "        conv4_b = tf.Variable(tf.zeros(self.n_classes))\n",
+    "        logits = tf.add(tf.matmul(x, conv4_W), conv4_b)\n",
     "\n",
     "        return logits\n",
     "\n"
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
